# brics

./: .gitignore  README.md  docker-compose.yml
apps/backend/: Dockerfile  main.py  pyproject.toml
apps/backend/api/: deps.py
apps/backend/api/v1/: budgets.py  concepts.py  friction.py  suppliers.py  webhooks.py
apps/backend/etl/: extractor.py  families.py  ingester.py  normalizer.py  run_extract.py  run_normalize.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 0001_orgs_y_org_id.py
apps/backend/models/: database.py  domain.py
apps/backend/scripts/: create_org.py
apps/backend/services/: embedder.py  llm_client.py  matcher.py  prices.py
apps/backend/tests/: test_matcher.py
apps/backend/workers/: celery_app.py  tasks.py
apps/frontend/: package.json  pnpm-lock.yaml
apps/frontend/src/: App.vue  main.ts  style.css
apps/frontend/src/router/: index.ts
apps/frontend/src/stores/: brics.ts
apps/frontend/src/views/: DashboardView.vue  FrictionView.vue  SuppliersView.vue
docs/: PLAN_REESTRUCTURACION.md  PRD_Proyecto_Brics.md  fase1.md
