[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sentence-transformers>=3.3.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
openai = ["openai>=2.41.1"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
